Bug fixed where distorted text with non-alphanumeric characters were not parsed properly.

--- a/TwitterInsight/WebContent/css/dialog.css
+++ b/TwitterInsight/WebContent/css/dialog.css
@@ -1,5 +1,5 @@
 #dialogoverlay {
-	background: aqua none repeat scroll 0 0;
+	background: #1DA1F2 none repeat scroll 0 0;
 	display: none;
 	height: 100%;
 	left: 0;
